# starman

./: .gitignore  .gitmodules  Adafruit_TLC5947.cpp  BUILDING.md  Music.h  Playtune.cpp  Playtune.h  README.md  arduino-starman.ino  bom.csv  bom.html  partitions.csv  sdkconfig.defaults  sm64.h  smb.h  smb2.h  smb3.h  smbw.h  smw.h
.github/workflows/: main.yml
firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults  update-fw.sh
firmware/main/: CMakeLists.txt  adc.c  buttons.c  buttons.h  config.c  config.h  display.c  display.h  draw.c  draw.h  ext.c  ext.h  font.h  game.c  game.h  gol.c  httpd.c  led1642gw.c  led1642gw.h  main.c  music.c  music.h  network.c  ota.c  ota.h  patterns.c  patterns.h  patterns_gol.h  random.c  random.h  sparkle.c  stage.h  storage.c  test.c  test.h  tetris.c  tetris.h  text.c  text.h  themes.c  (+3 more)
firmware/main/assets/: about.html  index.html  starman.js
firmware/main/music/: loz.h  sm64.h  smb2.h  smb3.h  smbw.h  smw.h  tet.h
gerbers/: starman-B_Cu.gbr  starman-B_Mask.gbr  starman-B_Paste.gbr  starman-B_Silkscreen.gbr  starman-Edge_Cuts.gbr  starman-F_Cu.gbr  starman-F_Mask.gbr  starman-F_Paste.gbr  starman-F_Silkscreen.gbr  starman-In1_Cu.gbr  starman-In2_Cu.gbr  starman-NPTH-drl_map.gbr  starman-NPTH.drl  starman-PTH-drl_map.gbr  starman-PTH.drl  starman-job.gbrjob
kicad/: expansion.kicad_sch  fp-info-cache  starman-cache.lib  starman.kicad_pcb  starman.kicad_pro  starman.kicad_sch  starman.kicad_sym  starman.sch  sym-lib-table
kicad/gerber/: starman-B_Cu.gbr  starman-B_Mask.gbr  starman-B_Paste.gbr  starman-B_SilkS.gbr  starman-Edge_Cuts.gbr  starman-F_Cu.gbr  starman-F_Mask.gbr  starman-F_Paste.gbr  starman-F_SilkS.gbr  starman-NPTH-drl_map.ps  starman-NPTH.drl  starman-PTH-drl_map.ps  starman-PTH.drl
kicad/starman.pretty/: HTSSOP 24.kicad_mod  QFN-40_EP_5x5_Pitch0.4mm.kicad_mod  SMS-1508MS-HT-R.kicad_mod  SPKR_SMS-1508MS-HT-R.kicad_mod
kicad2/: .gitignore  fp-lib-table  starman-cache.lib  starman.kicad_pcb  starman.kicad_prl  starman.kicad_pro  starman.kicad_sch  starman.kicad_sym  starman.lib  starman.pro  starman.sch  sym-lib-table
kicad2/starman.pretty/: CUI_PJ-040-SMT-TR.kicad_mod
main/: CMakeLists.txt  adc.c  adc.h  buttons.c  buttons.h  config.c  config.h  display.c  display.h  draw.h  font.c  font.h  game.c  game.h  gol.c  gol.h  httpd.c  httpd.h  led1642gw.c  led1642gw.h  lights.c  lights.h  main.c  music.c  music.h  network.c  network.h  ota.c  ota.h  patterns.c  patterns.h  patterns_gol.h  random.c  random.h  rgb.c  rgb.h  smb.h  smb2.h  smb3.h  smw.h  (+14 more)
main/assets/: about.html  curtain.xcf  index.html  radar.xcf  siren.xcf  spiral.xcf  starman.css  starman.html  starman.js  status.json  style.css  sweep.xcf  swipe.xcf  swoosh.xcf  thump01.xcf  thump02.xcf  thump03.xcf  thump04.xcf  thump05.xcf  thump06.xcf  thump07.xcf  thump08.xcf  thump09.xcf  thump10.xcf  thump11.xcf  waves.xcf
main/legacy/: Playtune.cpp  arduino-starman.ino
main/music/: loz.h  sm64.h  smb.h  smb2.h  smb3.h  smw.h
mount/: mount.scad  mount.stl  pcb.scad  stencil.scad  stencil.stl
pcb/: .gitignore  expansion.kicad_sch  fp-info-cache  fp-lib-table  starman-cache.lib  starman.kicad_pcb  starman.kicad_pro  starman.kicad_sch  starman.sch  sym-lib-table
pcb/3d/: CUI_DEVICES_PJ-040-SMT-TR.step  SMS-1508MS-HT-R.step
pcb/gerbers/: starman-B_Mask.gbr  starman-Edge_Cuts.gbr  starman-F_Mask.gbr  starman-F_Paste.gbr  starman-In1_Cu.gbr  starman-In2_Cu.gbr  starman-NPTH.drl  starman-PTH.drl  starman-job.gbrjob
pcb/starman.pretty/: LED_Osram_Lx_P47F_D2mm_ReverseMount.kicad_mod  QFN-40_EP_5x5_Pitch0.4mm.kicad_mod  SPKR_SMS-1508MS-HT-R.kicad_mod  SW_JS102011SCQN.kicad_mod  TO-252-3L.kicad_mod
