idf_component_register(SRCS
                    "main.c"
                    "buttons.c"
                    "config.c"
                    "display.c"
                    "gol.c"
                    "led1642gw.c"
                    "music.c"
                    "network.c"
                    "ota.c"
                    "patterns.c"
                    "random.c"
                    "status.c"
                    "storage.c"
                    "sparkle.c"
                    "text.c"
                    "util.c"
                    "wifi.c"
                    INCLUDE_DIRS ".")
