idf_component_register(SRCS
                    "main.c"
                    "adc.c"
                    "buttons.c"
                    "config.c"
                    "display.c"
                    "draw.c"
                    "game.c"
                    "gol.c"
                    "httpd.c"
                    "led1642gw.c"
                    "music.c"
                    "network.c"
                    "ota.c"
                    "patterns.c"
                    "random.c"
                    "sparkle.c"
                    "storage.c"
                    "test.c"
                    "text.c"
                    "themes.c"
                    "util.c"
                    EMBED_FILES
                    "assets/about.html"
                    "assets/index.html"
                    "assets/style.css"
                    "assets/starman.js"
                    INCLUDE_DIRS ".")
